Release 1.0.1 (in development)
==============================

* Fix building with the JSON builder.

* Fix hyperrefs in object descriptions for LaTeX.


Release 1.0 (Jul 23, 2010)
==========================

Incompatible changes
--------------------

* Support for domains has been added.  A domain is a collection of
  directives and roles that all describe objects belonging together,
  e.g. elements of a programming language.  A few builtin domains are
  provided:

  - Python
  - C
  - C++
  - JavaScript
  - reStructuredText

* The old markup for defining and linking to C directives is now
  deprecated.  It will not work anymore in future versions without
  activating the :mod:`~sphinx.ext.oldcmarkup` extension; in Sphinx
  1.0, it is activated by default.

* Removed support for old dependency versions; requirements are now:

  - docutils >= 0.5
  - Jinja2   >= 2.2

* Removed deprecated elements:

  - ``exclude_dirs`` config value
  - ``sphinx.builder`` module

Features added
--------------

* General:

  - Added a "nitpicky" mode that emits warnings for all missing
    references.  It is activated by the :option:`-n` command-line switch
    or the :confval:`nitpicky` config value.
  - Added ``latexpdf`` target in quickstart Makefile.

* Markup:

  - The :rst:role:`menuselection` and :rst:role:`guilabel` roles now
    support ampersand accelerators.
  - New more compact doc field syntax is now recognized: ``:param type
    name: description``.
  - Added ``tab-width`` option to :rst:dir:`literalinclude` directive.
  - Added ``titlesonly`` option to :rst:dir:`toctree` directive.
  - Added the ``prepend`` and ``append`` options to the
    :rst:dir:`literalinclude` directive.
  - #284: All docinfo metadata is now put into the document metadata, not
    just the author.
  - The :rst:role:`ref` role can now also reference tables by caption.
  - The :rst:dir:`include` directive now supports absolute paths, which
    are interpreted as relative to the source directory.