@@ -1,6 +1,9 @@
 Release 1.0.1 (in development)
 ==============================
 
+* Fix display names for objects linked to by intersphinx with
+  explicit targets.
+
 * Fix building with the JSON builder.
 
 * Fix hyperrefs in object descriptions for LaTeX.
